// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-phone Uses checkout as a preference if both customer and checkout load a phone number. 1`] = `
<sc-customer-phone size="medium">
  <mock:shadow-root>
    <sc-phone-input autocomplete="phone" help="" name="phone" value="111"></sc-phone-input>
  </mock:shadow-root>
</sc-customer-phone>
`;

exports[`sc-customer-phone Uses the checkout phone number on load 1`] = `
<sc-customer-phone size="medium">
  <mock:shadow-root>
    <sc-phone-input autocomplete="phone" help="" name="phone" value="111"></sc-phone-input>
  </mock:shadow-root>
</sc-customer-phone>
`;

exports[`sc-customer-phone Uses the customer phone number on load 1`] = `
<sc-customer-phone size="medium">
  <mock:shadow-root>
    <sc-phone-input autocomplete="phone" help="" name="phone" value="999"></sc-phone-input>
  </mock:shadow-root>
</sc-customer-phone>
`;

exports[`sc-customer-phone renders 1`] = `
<sc-customer-phone size="medium">
  <mock:shadow-root>
    <sc-phone-input autocomplete="phone" help="" name="phone" value=""></sc-phone-input>
  </mock:shadow-root>
</sc-customer-phone>
`;
